--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <meta charset="utf-8" />
-  <title>Сайт-звіт до лабораторних робіт студентки 1 курсу групи "Фізика"</title>
+  <title>Сайт-звіт до лабораторних робіт студентки 1 курсу групи "Фізика" Слободяник Анастасии</title>
   <style type="text/css">
    body {
     font: 10pt Arial, Helvetica, sans-serif; /* Шрифт на веб-странице */
@@ -53,15 +53,16 @@
  </head>
  <body>
   <div id="container">
-   <div id="header">Сайт-звіт до лабораторних робіт студентки 1 курсу групи "Фізика"</div>
+   <div id="header">Сайт-звіт до лабораторних робіт студентки 1 курсу групи "Фізика"Слободяник Анастасии</div>
   <div id="content">
-    <h2>Сайт-звіт до лабораторних робіт студентки 1 курсу групи "Фізика"</h2>
+    <h2>Сайт-звіт до лабораторних робіт студентки 1 курсу групи "Фізика" Слободяник Анастасии</h2>
 
    </div>
    <div id="sidebar">
 
     <p><a href="index.html">Домашня сторінка</a></p>
     <p><a href="lab1.html">звіт до лабораторної роботи №1. Тема - Текстовий процесор</a></p>
+    <p><a href="lab1.html">звіт до котрольної роботи №1. Тема - Текстовий процесор</a></p>
     <p><a href="lab2.html">звіт до лабораторної роботи №2. Тема - Google презентація</a></p>
     <p><a href="lab3.html">звіт до лабораторної роботи №3. Тема - Google малюнок</a></p>
     <p><a href="lab4.html">звіт до лабораторної роботи №4. Тема - Google форма-опитування</a></p>
@@ -69,7 +70,7 @@
    <p><a href="lab6.html">звіт до лабораторної роботи №6. Тема -  Google група</a></p>
    </div>
    <div class="clear"></div>
-   <div id="footer">&copy; Сайт-звіт до лабораторних робіт студентки 1 курсу групи "Фізика"</div>
+   <div id="footer">&copy; Сайт-звіт до лабораторних робіт студентки 1 курсу групи "Фізика" Слободяник Анастасии</div>
   </div>
  </body>
 </html>
