--- a/control1.html
+++ b/control1.html
@@ -60,13 +60,15 @@
 3. iframe з результатом у pdf або html форматі 
 <p>3. <iframe src="control1.pdf" width="500" height="700"></iframe></p> 
 4. Посилання на Google диск для перегляду результату
-<p>4. <a href="https://drive.google.com/file/d/1diGKyAd0i1odi95HgsWSEsWslnWQnmxc/view?usp=sharing">Посилання на Гугл диск</a></p> 
+<p>4. <a href="https://drive.google.com/file/d/1x7vtNzdUNKcaJ9G4qWOSP0xkCOqUXj29/view?usp=sharing">Посилання на Гугл диск</a></p> 
 5. OneDrive для перегляду результату
-<p>5. <a href="https://1drv.ms/w/s!AqL-Xn06iDZGf73MBMJUtPLJwTI?e=i2qaVX">Посилання на OneDrive</a></p> 
+<p>5. <a href="https://1drv.ms/w/s!AqL-Xn06iDZGgQYxbVtudflIlQ17?e=FKsYxg">Посилання на OneDrive</a></p> 
  6.1. Рідний формат для редактору Microsoft Office. 
  <p>6.1 <a href="control1.docx">Формат Microsoft (*.docx)</a></p> 
 6.2. Рідний формат для редактору Libre (Open) Office.
  <p>6.2 <a href="control1.odt">Формат Open Office (*.odt)</a></p>
+
+
 <p>2. Індивідуальне завдання <img src="Desert.jpg" alt="завдання"> </p>  
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSHvXuaKKUqzEOLCOvdVDc2u1vCEM7ETWj1ZONodqoeVoeV9A49JErKpSwxu2bCJTOiyxbVcSzN0D0D/embed?start=false&loop=false&delayms=3000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
     <h2>Сайт-звіт до лабораторних робіт студентки 1 курсу групи "Фізика" Слободяник Анастасии</h2>
