--- a/control1.html
+++ b/control1.html
@@ -1,8 +1,8 @@
-<!doctype html>
+>
 <html>
  <head>
   <meta charset="utf-8" />
-  <title>Сайт-звіт до контрольних робіт студентки 1 курсу групи "Фізика" Слободяник Анастасии</title>
+  <title>Сайт-звіт до контрольних робіт студентки 1 курсу групи "Фізика" Слободяник Анастасії</title>
   <style type="text/css">
    body {
     font: 10pt Arial, Helvetica, sans-serif; /* Шрифт на веб-странице */
@@ -53,10 +53,10 @@
  </head>
  <body>
   <div id="container">
-   <div id="header">Сайт-звіт до контрольних робіт студентки 1 курсу групи "Фізика"Слободяник Анастасии</div>
+   <div id="header">Сайт-звіт до контрольних робіт студентки 1 курсу групи "Фізика"Слободяник Анастасії</div>
   <div id="content">
 1. Номер і тема контрольної роботи
-<h2>звіт до контрольної роботи№1. Тема -Текстовій процесор</h2> 
+<h2>звіт до контрольної роботи №1. Тема -Текстовий процесор</h2> 
 3. iframe з результатом у pdf або html форматі 
 <p>3. <iframe src="control1.pdf" width="500" height="700"></iframe></p> 
 4. Посилання на Google диск для перегляду результату
@@ -67,26 +67,26 @@
  <p>6.1 <a href="control1.docx">Формат Microsoft (*.docx)</a></p> 
 6.2. Рідний формат для редактору Libre (Open) Office.
  <p>6.2 <a href="control1.odt">Формат Open Office (*.odt)</a></p>
-
-
+ 
+ 
 <p>2. Індивідуальне завдання <img src="Desert.jpg" alt="завдання"> </p>  
 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vSHvXuaKKUqzEOLCOvdVDc2u1vCEM7ETWj1ZONodqoeVoeV9A49JErKpSwxu2bCJTOiyxbVcSzN0D0D/embed?start=false&loop=false&delayms=3000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-    <h2>Сайт-звіт до лабораторних робіт студентки 1 курсу групи "Фізика" Слободяник Анастасии</h2>
-
+    <h2>Сайт-звіт до контрольної роботи студентки 1 курсу групи "Фізика" Слободяник Анастасії</h2>
+ 
    </div>
    <div id="sidebar">
-
+ 
     <p><a href="index.html">Домашня сторінка</a></p>
     <p><a href="lab1.html">звіт до лабораторної роботи №1. Тема - Текстовий процесор</a></p>
-    <p><a href="lab1.html">звіт до котрольної роботи №1. Тема - Текстовий процесор</a></p>
-    <p><a href="lab2.html">звіт до лабораторної роботи №2. Тема - Google презентація</a></p>
+    <p><a href="lab1.html">звіт до контрольної роботи №1. Тема - Текстовий процесор</a></p>
+    <p><a href="lab2.html">звіт до лабораторної роботи №2. Тема -Табличний процесор. Основи</a></p>
     <p><a href="lab3.html">звіт до лабораторної роботи №3. Тема - Google малюнок</a></p>
     <p><a href="lab4.html">звіт до лабораторної роботи №4. Тема - Google форма-опитування</a></p>
    <p><a href="lab5.html">звіт до лабораторної роботи №5. Тема - Google форма-тестування</a></p>
    <p><a href="lab6.html">звіт до лабораторної роботи №6. Тема -  Google група</a></p>
    </div>
    <div class="clear"></div>
-   <div id="footer">&copy; Сайт-звіт до контрольних робіт студентки 1 курсу групи "Фізика" Слободяник Анастасии</div>
+   <div id="footer">&copy; Сайт-звіт до контрольної роботи студентки 1 курсу групи "Фізика" Слободяник Анастасії</div>
   </div>
  </body>
-</html>
+
