--- a/lab1.html
+++ b/lab1.html
@@ -1,5 +1,4 @@
 <!doctype html>
- 
 < html >
 < голова >
  < meta charset = " utf-8 " />
@@ -82,3 +81,29 @@
 < Р > 6,1 < HREF = " lab1-2.docx " > Формат Microsoft (* .docx) </ > </ р >
 6.2. Рідний формат для редактора Libre (Open) Office.
 < Р > 6,2 < HREF = " lab1-2.odt " > Формат Open Office (* ODT) </ > </ р >
+ 
+< p > 2. Индивидальное завдання < img src = " Desert.jpg " alt = " завдання " > </ p > 
+< IFrame SRC = " https://docs.google.com/presentation/d/e/2PACX-1vSHvXuaKKUqzEOLCOvdVDc2u1vCEM7ETWj1ZONodqoeVoeV9A49JErKpSwxu2bCJTOiyxbVcSzN0D0D/embed?start=false&loop=false&delayms=3000 " frameborder =" 0 " ширина =" 480 " высота =" 299 " allowfullscreen = " true " mozallowfullscreen = " true " webkitallowfullscreen = " true " > </ iframe >
+
+ 
+
+ 
+  </ div >
+  < div id = " sidebar " >
+< Р > < HREF = " index.html " > Домашня сторінка </ > </ р >
+   < Р > < HREF = " lab1.html " > звіт до лабораторної роботи №1. Тема - Текстовий
+процесор </ a > </ p >
+   < Р > < HREF = " control1.html " > звіт до котрольної роботі №1. Тема - Текстовий процесор </ a > </ p >
+   < Р > < HREF = " lab2.html " > звіт до лабораторної роботи №2. Тема -Табличний процесор. Основи </ a > </ p >
+   < Р > < HREF = " lab3.html " > звіт до лабораторної роботи №3. Тема - Google малюнок </ a > </ p >
+   < Р > < HREF = " lab4.html " > звіт до лабораторної роботи №4. Тема - Google форма-опитування </ a > </ p >
+  < Р > < HREF = " lab5.html " > звіт до лабораторної роботи №5. Тема - Google форма-тестування </ a > </ p >
+  < Р > < HREF = " lab6.html " > звіт до лабораторної роботи №6. Тема - Google група </ a > </ p >
+  </ div >
+  < div class = " clear " > </ div >
+  < div id = " footer " > & copy; Сайт-звіт до лабораторних робіт студентки 1 курсу групи "Фізика" Слободяник Анастасії </ div >
+
+ 
+ </ div >
+</ body >
+</ html >
