--- a/lab1.html
+++ b/lab1.html
@@ -67,7 +67,8 @@
 6.1. Рідний формат для редактора Microsoft Office.
 <Р> 6,1 <HREF = "lab1.docx"> Формат Microsoft (* .docx) </> </ р>
 6.2. Новый формат для редактора Libre (Open) Office.
-<Р> 6,2 <HREF = "lab1.odt"> Формат Open Office (* ODT) </> </ р
+<Р> 6,2 <HREF = "lab1.odt"> Формат Open Office (* ODT) </> </ р>
+ 
 1. Номер і тема лабораторної роботи
 <h2> звіт до лабораторної роботи №1-2. Тема - Формування за зразком </ h2>
 3. iframe в результате в формате pdf или html.
