--- a/lab3.html
+++ b/lab3.html
@@ -61,7 +61,7 @@
 4. Посилання на Google диск для перегляду результату <p>4. <a href=" https://drive.google.com/file/d/1QZxXFWssOYNOKOpW4UxiEjwWbhPbvWtq/view?usp=sharing">Посилання на Гугл диск</a></p>
 5. OneDrive для перегляду результату <p>5. <a href=" https://1drv.ms/x/s!AqL-Xn06iDZGgQ3-SMzCYnELlMj2?e=QqS5FJ ">Посилання на OneDrive</a></p>
 6.1. Рідний формат для редактору Microsoft Office.
-<p>6.1 <a href="lab1.xlsx">Формат Microsoft (*.xlsx)</a></p>
+   < Р > 6,1 < HREF = " lab3.xlsx " > Формат Microsoft (* .xls) </ > </ р >
 6.2. Рідний формат для редактору Libre (Open) Office.
 <p>6.2 <a href="lab3.ods">Формат Open Office (*.ods)</a></p>  
   < h2 > Сайт-звіт до лабораторных робіт студентки 1 курсу групи "Фізика" Слободяник Анастасії </ h2 >
