--- a/lab3.html
+++ b/lab3.html
@@ -55,7 +55,7 @@
   <div id="container">
    <div id="header">Сайт-звіт до лабораторних робіт студентки 1 курсу групи "Фізика" Слободяник Анастасії </div>
   <div id="content">
-<h2>звіт до лабораторної роботи №1. Тема - Формування за зразком</h2>
+<h2>звіт до лабораторної роботи №3. Тема - Табличний процесор. Адресація. Арифметичні операції </h2>
 3. iframe з результатом у pdf або html форматі
 <p>3. <iframe src="lab3.pdf" width="500" height="700"></iframe></p>
 4. Посилання на Google диск для перегляду результату <p>4. <a href="https://drive.google.com/file/d/1QZxXFWssOYNOKOpW4UxiEjwWbhPbvWtq/view?usp=sharing ">Посилання на Гугл диск</a></p>
